--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -15,7 +15,7 @@
             <div class="dropdown-menu border-0 lower-nav-dropdown bg-ib-light" aria-labelledby="products-link">
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
-                        <div class="lower-nav-icon-circle bg-ib-dark">
+                        <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-shop text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">ALL PRODUCTS</p>
@@ -23,7 +23,7 @@
                 </a>
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
-                        <div class="lower-nav-icon-circle bg-ib-dark">
+                        <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-bug text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE BEES</p>
@@ -31,7 +31,7 @@
                 </a>
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
-                        <div class="lower-nav-icon-circle bg-dark">
+                        <div class="category-icon-circle bg-dark">
                             <i class="fas fa-box-archive text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE KIT</p>
@@ -39,7 +39,7 @@
                 </a>
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
-                        <div class="lower-nav-icon-circle bg-ib-dark">
+                        <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-graduation-cap text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">COURSES</p>
@@ -47,7 +47,7 @@
                 </a>
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
-                        <div class="lower-nav-icon-circle bg-ib-dark">
+                        <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-jar text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">PRODUCE</p>
