--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -13,7 +13,7 @@
                 <p class="text-dark lower-nav-link-text">PRODUCTS</p>
             </a>
             <div class="dropdown-menu border-0 lower-nav-dropdown bg-ib-light" aria-labelledby="products-link">
-                <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
+                <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}">
                     <div>
                         <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-shop text-ib-light text-center"></i>
