--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             <!-- Logo -->
             <div class="logo-div font-title col-12 col-lg-4 my-auto">
                 <a href="{% url 'home' %}" class="nav-link">
-                    <img src="{% static 'media/logo.svg' %}" alt="Island Bees Logo" class="logo-img me-2">
+                    <img src="{{ MEDIA_URL }}logo.svg" alt="Island Bees Logo" class="logo-img me-2">
                     <div class="logo-text my-auto">
                         <h2 class="font-title weight-bold">ISLAND BEES</h2>
                         <p class="weight-regular">FOR ALL YOUR BEES' NEEDS</p>
